notification statics
